# HT6022_lib_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  ht6022lib.cpp  ht6022lib.h  main.cpp
project/: hantek6022.cpp  hantek6022.h  ht6022lib.cpp  ht6022lib.h  main.cpp  oscilloscopes.h
